src/App.css
/********************************************************************* CSS VARIABLES *********************************************************************/ 
@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
:root {

  --main-bg-color : #D0307D;
  --secondary-bg-color : #191919;
  --light-color : #f1f1f1;
  --dark-color: #131313;
  --third-color: #d9d9d9;
  --box-shadow: #e1e1e1 0px 1px 0px, #e1e1e1 0px 1px 2px, #e1e1e1 0px 2px 4px;
  --font-title :  'Great Vibes', cursive;
  --font-text :'Josefin Sans', sans-serif;
}


/********************************************************************* BASIC CSS *********************************************************************/ 
.desktop {
  display: none;
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  background-color: var(--main-bg-color);
  color: var(--light-color);
  font-family: var(--font-text);
  overflow-x: hidden;
}

h1,h3 {
  font-family: var(--font-title);
}

a {
  color: initial;
  text-decoration: none;
  font-weight: initial;
}

li {
  list-style: none;
}

section {
  padding: 2rem 0;
}

.no_button {
  background-color: transparent;
  border: none;
}

.flex {
  display: flex;
}

.flex-col {
  display: flex;
  flex-direction: column;
}

.wrap {
  flex-wrap: wrap;
}

.align-center {
  align-items: center;
}

.align-start {
  align-items: flex-start;
}
.align-end {
  align-items: flex-end;
}

.justify-center {
  justify-content: center;
}
.justify-start {
  justify-content: flex-start;
}
.justify-end {
  justify-content: flex-end;
}
.justify-between {
  justify-content: space-between;
}
.justify-evenly {
  justify-content: space-evenly;
}
.container {
  position: relative;
}

.button_style {
  border: none;
  padding: 1rem;
  border-radius: 0.75rem;
  font-weight: bold;
  background-color: var(--light-color);
  color: var(--dark-color);
  box-shadow: var(--box-shadow);
  margin: 1rem;
}

.margin1r0 {
  margin: 1rem 0;
}
.margin0r1r {
  margin: 0 1rem;
}

.light, .light * {
  background-color: var(--light-color);
  color: var(--dark-color);
}

.light button {
  background-color: var(--main-bg-color);
  color: var(--light-color);
}
/********************************************************************* NAV *********************************************************************/ 
header, header * {
  background-color: var(--light-color);
}

.openBurger {
  z-index: 2;
  height: 100%;
  padding: 0 0 2rem;
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  animation: open 0.25s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
}

@keyframes open {
  0% {
    transform: scale(0);
    transform-origin: 0% 0%;
    opacity: 1;
  }
  100% {
    transform: scale(1);
    transform-origin: 0% 0%;
    opacity: 1;
  }
}

.openBurger button {
  width: 100%;
  font-size: 2rem;
  padding: 2rem 1rem;
  border: none;
  color: var(--dark-color);
}

button.croix {
  display: flex;
  justify-content: flex-end;
  width: 95%;
  margin-left: 0.5rem;
  box-shadow: none;
}

.croix img {
  height: 3rem;
  padding: 0.5rem;
}

.padding-header {
  padding: 0.5rem 0.5rem 1rem;
  align-items: center;
}

.burger {
height: 2rem;
}

.logo {
  height: 4rem;
}

/********************************************************************* HOME *********************************************************************/ 
.main_container {
  padding: 1rem 3rem;
}

main {
  margin: 0;
  border: none;
}
main, main * {
  overflow: hidden;
}
/************* LANDING IMAGE *************/
.landing_page {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 90vh;
  margin: 1rem 0 2rem;
  background-color: var(--dark-color);
  position: relative;
}

.landing_page, .landing_page * {
  overflow: hidden;
}
.landing_page h1 {
  font-size: 4rem;
  text-align: center;
}

.landing_page h2 {
  font-size: 1rem;
}
.landing_page h1, .landing_page h2 {
  background-color: transparent;
  padding: 0.5rem 2rem;
  z-index: 1;
  margin: 0;
  color: var(--light-color);
  text-align: center;
}

  .background_img {
    position: absolute;
    background-position: 50%;
    min-width: 100vw;
    max-height: 100%;
    overflow: hidden;
  }
  .veil {
    position: absolute;
    background-color: var(--secondary-bg-color);
    width: 100%;
    height: 100%;
    opacity: 60%;
  }


  /***************** HISTOIRE *****************/

  .histoire {
    margin: 0 0 -0.5rem;
    padding-top: 7rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: relative;
  }

  .histoire h3 {
    font-size: 3rem;
    padding: 1rem;
    text-align: left;
    width: 100%;
  }

  .histoire img {
    width: 100%;
    padding: 1rem;
    border-radius: 1.5rem;
  }

  .histoire article {
    padding: 2rem;
    font-size: 1.2rem;
    display: flex;
    flex-direction: column;
  }
.histoire h4 {
  margin: 1rem 0;
}


.histoire button {
  margin-bottom: 6rem;
}
/********************************* NOTRE HISTOIRE SHAPES TOP ********************************/


.custom-shape-divider-top-1671378446 {
  position: absolute;
  top: 0;
  left: 0;
  width: 140%;
  overflow: hidden;
  line-height: 0;
}

.custom-shape-divider-top-1671378446 svg {
  position: relative;
  display: block;
  width: calc(115% + 1.3px);
  height: 104px;
}

.custom-shape-divider-top-1671378446 .shape-fill {
  fill: var(--light-color);
}
/********************************* NOTRE HISTOIRE SHAPES BOTTOM ********************************/
.custom-shape-divider-bottom-1671378180 {
  position: absolute;
  bottom: 0rem;
  left: 0;
  width: 100%;
  overflow: hidden;
  line-height: 0;
  transform: rotate(180deg);
}

.custom-shape-divider-bottom-1671378180 svg {
  position: relative;
  display: block;
  width: calc(115% + 1.3px);
  height: 104px;
}

.custom-shape-divider-bottom-1671378180 .shape-fill {
  fill: #F1F1F1;
}


/********************************  AUTRE SHAPES  ********************************/

.custom-shape-divider-bottom-1671377551 {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  overflow: hidden;
  line-height: 0;
  transform: rotate(180deg);
}

.custom-shape-divider-bottom-1671377551 svg {
  position: relative;
  display: block;
  width: calc(115% + 1.3px);
  height: 104px;
}

.custom-shape-divider-bottom-1671377551 .shape-fill {
  fill: #D0307D;
}

/********************************************************************* Produits *********************************************************************/ 
.produits {
  height: fit-content;
  margin: 2rem 0;
}
.produits, .produits * {
  overflow: visible;
}

.produits img {
  max-width: 100vw;
  height: 50vh;
}


/********************************************************************* Page 1 *********************************************************************/ 

/********************************************************************* Page 1 *********************************************************************/ 
/********************************************************************* Page 1 *********************************************************************/ 



/********************************************************************* CONTACT *********************************************************************/ 


label {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  margin: 1rem 0
}
.contact_form input, .contact_form textarea{
padding: 1rem 2rem;
margin: 1rem 0;
border-radius: 0.25rem;
border: none;
box-shadow: var(--box-shadow);
width: 90%;
}

.contact_form textarea{
  height: 10rem;
}
.contact_form button {
  width: 10rem;
  margin: 1rem auto;
}

/********************************************************************* FOOTER *********************************************************************/ 

.footer {
  padding: 1rem 2rem;
  align-items: flex-start;
  background-color: var(--light-color);
  color: var(--dark-color);
  height: fit-content;
  display: flex;
  flex-direction: column;
}

.footer * {
  padding: 0.35rem 0;
  background-color: inherit;
  color: inherit;
}

.footer li, .footer a, .footer div {
  padding: 0.15rem 0;
}
.footer-section {
  width: 100%;
}

.footer img {
  width: 3rem;
  margin: 0 0.25rem;
}

.mentions {
  text-align: center;
  width: 100%;
  margin: 2rem 1rem 0;
}

/********************************************************************* MENTIONS *********************************************************************/ 
.mentions-container {
  padding: 1rem 4rem;
}

.mentions-container > * {
  padding: 1rem 0;
}

.mentions-container h2 {
  margin-top: 2rem;
}


/******************************************************************************************************************************************/ 
/********************************************************************* DESKTIOP *********************************************************************/ 
/******************************************************************************************************************************************/ 


@media screen and (min-width: 768px) {

  .mobile {
    display: none;
  }

  .desktop {
    display: initial;
  }

/********************************************************************* NAVBAR *********************************************************************/ 
.navbar {
  padding: 2rem 0;

}

.navbar * {
  padding: 0rem 2rem;
}
  
}

